# nexus

./: Cargo.toml  Dockerfile  PLAN.md  TODO.md  build.sh  moon.yml
.moon/: toolchain.yml  workspace.yml
crates/amai-agent/: Cargo.toml  Dockerfile  agent-minimax-long.toml  agent-qwen-local.toml  agent-shepherd-anthropic.toml  agent-shepherd-qwen.toml  agent-tg-qwen-coder.toml  amai-agent.example.toml  amai-anthropic-boxy.toml  amai-anthropic.toml  amai-tg-anthropic.toml  amai-tg-local.toml  amai-tg.toml  bench-minimax.toml  gemini-eval.toml  minimax-eval.toml
crates/amai-agent/src/: agent_helpers.rs  bench.rs  config.rs  delegate.rs  google.rs  identity.rs  install_skill.rs  main.rs  plan_execute.rs  prompt.rs  shepherd_gateway.rs  soullog_client.rs  state.rs  wiring.rs
crates/amai-app/: Cargo.toml
crates/amai-app/src/: app.rs  config.rs  lib.rs  onboarding.rs  ui.rs
crates/amai-server/: Cargo.toml
crates/amai-server/src/: main.rs
crates/amai-tools/: Cargo.toml
crates/amai-tools/src/: arxiv.rs  ask_user.rs  contracts.rs  fetch_url.rs  http_request.rs  lib.rs  link.rs  shepherd.rs  synthesize.rs  web_search.rs
crates/amai-wasm/: Cargo.toml
crates/amai-wasm/src/: lib.rs
crates/nexus-agent/: Cargo.toml  agent-minimax-long.toml  agent-qwen-local.toml  agent-shepherd-anthropic.toml  agent-shepherd-qwen.toml  agent-tg-qwen-coder.toml  moon.yml  nexus-agent.example.toml  nexus-anthropic.toml  nexus-tg-anthropic.toml  nexus-tg-local.toml  nexus-tg.toml  run-tg.sh
crates/nexus-agent/src/: agent_helpers.rs  bench.rs  config.rs  google.rs  identity.rs  install_skill.rs  main.rs  plan_execute.rs  prompt.rs  soullog_client.rs  state.rs
crates/nexus-app/: Cargo.toml
crates/nexus-app/src/: app.rs  config.rs  onboarding.rs  ui.rs
crates/nexus-server/: Cargo.toml
crates/nexus-server/src/: main.rs
crates/nexus-tools/: Cargo.toml
crates/nexus-tools/src/: arxiv.rs  contracts.rs  fetch_url.rs  glob.rs  http_request.rs  lib.rs  shepherd.rs  synthesize.rs  web_fetch.rs
crates/nexus-wasm/: Cargo.toml
crates/nexus-wasm/src/: lib.rs
web/: index.html  style.css
