[workspace]
resolver = "2"
members = [
    "crates/amai-wasm",
    "crates/amai-app",
    "crates/amai-tools",
    "crates/amai-server",
    "crates/amai-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["AMAI Labs <team@amai.net>"]
repository = "https://github.com/AMAI-LABS/amai"

[workspace.dependencies]
# Internal crates
amai-app = { path = "crates/amai-app", version = "0.1.0" }
amai-tools = { path = "crates/amai-tools", version = "0.1.0" }

# AMAI ecosystem (local monorepo)
soul-core = { path = "../soul/soul-core", default-features = false, features = ["wasm"] }
soul-coder = { path = "../soul/soul-coder", default-features = false, features = ["wasm"] }

# soul-terminal (crates.io)
soul-terminal-core = "0.1"
soul-terminal-widgets = "0.1"
soul-terminal-render = "0.1"
soul-terminal-app = "0.1"

# Async
tokio = { version = "1", features = ["sync", "macros", "rt"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
console_log = "1"
console_error_panic_hook = "0.1"

# Logging
log = "0.4"
tracing = "0.1"
