[package]
name = "amai-tools"
description = "General-purpose agent tools for AMAI — web fetch, link opening, user interaction"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
soul-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Document"] }
js-sys = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4", "js"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[features]
default = []
native = []
